# traffic-flow-rag

./: .env  .env.example  .gitignore  README.md  pyproject.toml  注意事項!!!!!!!!!!!!!!!!!!.txt
data/: Live_Forecast.csv  Section.csv  SectionShape.csv
src/traffic_flow_rag/: rag.py
src/traffic_flow_rag/modules/: __init__.py  data_vector.py  download_csv.py  llm.py  prompts.py  supabase_vector.py
